--- a/test.html
+++ b/test.html
@@ -26,8 +26,9 @@
           gs.init('D_DGTRBQJBBRU',{debug: true});
 
           let response = await fetch("https://gist.githubusercontent.com/sjcotto/41334a24c63c42dfd68d2b5bb9fb7514/raw/f9eca896f296749e4a0e7c355a4e347d5fb4e6cb/items.json", {method: 'GET',redirect: 'follow'})
-          let items = await response.json();
-          console.log(items);
+          let items = await response.json()
+          
+          console.log(items, typeof items);
 
           //re order items
           items = await gs.rank(items);
@@ -35,10 +36,10 @@
           console.log(items);
 
           gs.feedback('click',{
-            item : 93363
+            item : "93363"
           })
 
-          items = await gs.rank(items);
+          // items = await gs.rank(items.items);
 
           console.log(items);
         },1000)
