adding results and stats

--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
           
           gs.init('D_DGTRBQJBBRU',{ debug: true });
 
-          gs.loadSearchWidget('div-123123-1231313',{
+          gs.loadSearchWidget('gs_search_widget',{
             project:'63321dada1438cf0b7f80896' 
           })
 
