--- a/test.html
+++ b/test.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <link rel="stylesheet" href="https://sdk-js.goshops.com/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script>
       (function () {
         var s = document.createElement('script');
         s.type = 'text/javascript';
         s.async = true;
-        s.src = 'https://sdk-js.goshops.com/index.js';
-        //s.src = '/index.js';
+        //s.src = 'https://sdk-js.goshops.com/index.js';
+        s.src = '/index.js';
         var x = document.getElementsByTagName('script')[0];
         x.parentNode.insertBefore(s, x);
       })();
