adding search functions in sdk

--- a/test.html
+++ b/test.html
@@ -30,6 +30,18 @@
             project:'63321dada1438cf0b7f80896' 
           })
 
+          gs.instantSearch('hoo',{
+            project:'63321dada1438cf0b7f80896' 
+          });
+
+          gs.neuralSearch('hoodie',{
+            project:'63321dada1438cf0b7f80896' 
+          });
+
+          gs.combinedSearch('hoodie',{
+            project:'63321dada1438cf0b7f80896' 
+          });
+
           let response = await fetch("https://gist.githubusercontent.com/sjcotto/41334a24c63c42dfd68d2b5bb9fb7514/raw/f9eca896f296749e4a0e7c355a4e347d5fb4e6cb/items.json", {method: 'GET',redirect: 'follow'})
           let items = await response.json()
           
